--- a/data_wrangling_1.Rmd
+++ b/data_wrangling_1.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Data Import"
+title: "Data Manipulation"
 author: "Maya Spaur"
 date: "9/17/2019"
 output: github_document
@@ -49,4 +49,37 @@ select(litters_data, litter_number, gd0_weight:pups_born_alive)
 
 ```
 
+##Filtering
+```{r}
+filter(litters_data, group =='Mod8')
+filter(litters_data, gd_of_birth ==20)
+filter(litters_data, gd_of_birth < 20)
+filter(litters_data, gd_of_birth >= 20)
+filter(litters_data, gd_of_birth < 6)
 
+drop_na(litters_data)
+
+drop_na(litters_data, gd0_weight)
+
+```
+
+##Mutating
+```{r}
+view(mutate(litters_data, wt_gain = gd18_weight - gd0_weight))
+
+mutate(
+  litters_data,
+  wt_gain = gd18_weight - gd0_weight, 
+  group = str_to_lower(group)
+)
+```
+
+##Arranging
+```{r}
+arrange(litters_data, pups_born_alive)
+
+arrange(litters_data, desc(pups_born_alive))
+
+arrange(litters_data, pups_born_alive, gd0_weight)
+
+```
