--- a/data_wrangling_1.Rmd
+++ b/data_wrangling_1.Rmd
@@ -83,3 +83,17 @@ arrange(litters_data, desc(pups_born_alive))
 arrange(litters_data, pups_born_alive, gd0_weight)
 
 ```
+
+Create a collection of commands
+```{r}
+litters_data = 
+  read_csv(file = "./data_import_examples/FAS_litters.csv") %>%
+  janitor::clean_names() %>%
+  select(-pups_survive) %>%
+  mutate(
+    wt_gain = gd18_weight - gd0_weight,
+    group = str_to_lower(group)) %>% 
+  drop_na(gd0_weight)
+
+litters_data
+```
